@@ -481,10 +481,10 @@ public class VentanaPrincipal extends JFrame {
                 if (resultado.isPresent()) {
                     final String[] nombre = {null};
                     resultado.get().presentarseEn(new ClienteRepresentador() {
-                        public void definirDni(String cuit) {} 
+                        public void definirDni(String cuit) {}
                         public void definirNombre(String n) { nombre[0] = n; }
                     });
-                    
+
                     if (nombre[0] != null && !nombre[0].isBlank()) {
                         txtDni.setText(dniIngresado);
                         txtNombre.setText(nombre[0]);
@@ -495,7 +495,7 @@ public class VentanaPrincipal extends JFrame {
                         return;
                     }
                 }
-                
+
                 txtDni.setText(dniIngresado);
                 txtNombre.setText("");
                 txtNombre.setForeground(Color.WHITE);
@@ -618,10 +618,10 @@ public class VentanaPrincipal extends JFrame {
 
         // Leer método de pago y descuento
         String metodoPago = (String) cmbMetodoPago.getSelectedItem();
-        double descuentoPct = 0;
+        java.math.BigDecimal descuentoPct = java.math.BigDecimal.ZERO;
         if ("EFECTIVO".equals(metodoPago)) {
             try {
-                descuentoPct = Double.parseDouble(txtDescuento.getText().trim());
+                descuentoPct = new java.math.BigDecimal(txtDescuento.getText().trim());
             } catch (NumberFormatException ignored) {}
         }
 
@@ -631,13 +631,14 @@ public class VentanaPrincipal extends JFrame {
         java.util.List<io.github.ramiro.escapesj.servicio.ItemFacturacion> itemsDto = itemsOrden.stream()
                 .map(item -> new io.github.ramiro.escapesj.servicio.ItemFacturacion(
                         item.tipo(), item.descripcion(), item.codigoProducto(), item.cantidad(), item.precioUnitario()))
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
 
         io.github.ramiro.escapesj.servicio.FacturacionRequest request = new io.github.ramiro.escapesj.servicio.FacturacionRequest(
-                dni, nombre, fechaHoy, itemsDto, descuentoPct
+                dni, nombre, fechaHoy, itemsDto, metodoPago, descuentoPct
         );
 
         io.github.ramiro.escapesj.servicio.FacturacionResult resultadoFacturacion;
+        io.github.ramiro.escapesj.servicio.FacturacionService facturacionService = new io.github.ramiro.escapesj.servicio.FacturacionService(boletaRepository, productoRepository, servicioRepository);
 
         try {
             resultadoFacturacion = facturacionService.facturarOrden(request);
@@ -651,16 +652,20 @@ public class VentanaPrincipal extends JFrame {
 
         String carpetaPdf = configRepository.getRutaBoletas();
         try {
-            String rutaPdf = BoletaPdfService.generarPdf(resultadoFacturacion.numero(), fechaHoy, dni, nombre,
+            String rutaPdf = io.github.ramiro.escapesj.servicio.BoletaPdfService.generarPdf(resultadoFacturacion.numero(), fechaHoy, dni, nombre,
                     resultadoFacturacion.items(), resultadoFacturacion.subtotal(), metodoPago, descuentoPct, carpetaPdf);
 
+            java.math.BigDecimal descuentoMonto = io.github.ramiro.escapesj.sdk.DineroUtil.redondearMoneda(
+                    resultadoFacturacion.subtotal().multiply(descuentoPct).divide(new java.math.BigDecimal("100"), 10, java.math.RoundingMode.HALF_UP)
+            );
+
             String resumen = "✅ Boleta #" + resultadoFacturacion.numero() + " generada correctamente.\n\n"
-                    + "Subtotal: $" + String.format("%,.0f", resultadoFacturacion.subtotal()) + "\n";
-            if (descuentoMonto > 0) {
-                resumen += "Descuento (" + String.format("%.0f", descuentoPct) + "%): -$"
-                        + String.format("%,.0f", descuentoMonto) + "\n";
+                    + "Subtotal: $" + String.format("%,.2f", resultadoFacturacion.subtotal()) + "\n";
+            if (descuentoMonto.compareTo(java.math.BigDecimal.ZERO) > 0) {
+                resumen += "Descuento (" + String.format("%,.2f", descuentoPct) + "%): -$"
+                        + String.format("%,.2f", descuentoMonto) + "\n";
             }
-            resumen += "Total: $" + String.format("%,.0f", resultadoFacturacion.totalFinal()) + "\n"
+            resumen += "Total: $" + String.format("%,.2f", resultadoFacturacion.totalFinal()) + "\n"
                     + "Método: " + metodoPago + "\n\n"
                     + "PDF guardado en:\n" + rutaPdf;
 
